--- a/ClaimyWebApps/ClaimyWebApps/ClaimyWebApps.csproj
+++ b/ClaimyWebApps/ClaimyWebApps/ClaimyWebApps.csproj
@@ -215,6 +215,10 @@
     <Compile Include="ViewModel\CustomerProfileViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-ClaimyWebApps-20191215110518.mdf" />
+    <Content Include="App_Data\aspnet-ClaimyWebApps-20191215110518_log.ldf">
+      <DependentUpon>aspnet-ClaimyWebApps-20191215110518.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -446,7 +450,6 @@
     <Content Include="Views\Customer\LoggedInMainPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Views\LoggedInMainPage\" />
   </ItemGroup>
   <ItemGroup>
