--- a/ClaimyWebApps/ClaimyWebApps/ClaimyWebApps.csproj
+++ b/ClaimyWebApps/ClaimyWebApps/ClaimyWebApps.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Models\ZipCity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\ClaimformViewModel.cs" />
     <Compile Include="ViewModel\EmployeeProfileViewModel.cs" />
     <Compile Include="ViewModel\CustomerProfileViewModel.cs" />
   </ItemGroup>
